--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.2.7",
     "@nestjs/platform-express": "^10.0.0",
+    "joi": "^17.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -72,7 +75,10 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@app/auth-lib(|/.*)$": "<rootDir>/libs/auth-lib/src/$1"
+      "^@app/auth-lib(|/.*)$": "<rootDir>/libs/auth-lib/src/$1",
+      "^@app/rmq-lib(|/.*)$": "<rootDir>/libs/rmq-lib/src/$1",
+      "^@app/users-lib(|/.*)$": "<rootDir>/libs/users-lib/src/$1",
+      "^@app/common-lib(|/.*)$": "<rootDir>/libs/common-lib/src/$1"
     }
   }
 }
