--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,24 @@
       ],
       "@app/auth-lib/*": [
         "libs/auth-lib/src/*"
+      ],
+      "@app/rmq-lib": [
+        "libs/rmq-lib/src"
+      ],
+      "@app/rmq-lib/*": [
+        "libs/rmq-lib/src/*"
+      ],
+      "@app/users-lib": [
+        "libs/users-lib/src"
+      ],
+      "@app/users-lib/*": [
+        "libs/users-lib/src/*"
+      ],
+      "@app/common-lib": [
+        "libs/common-lib/src"
+      ],
+      "@app/common-lib/*": [
+        "libs/common-lib/src/*"
       ]
     }
   }
