added prisma, and also fixed some things

--- a/apps/api-gateway/nginx.conf
+++ b/apps/api-gateway/nginx.conf
@@ -9,5 +9,9 @@ http {
     location /api/auth {
       proxy_pass http://auth/auth;
     }
+
+    location /api/users {
+      proxy_pass http://users/users;
+    }
   }
 }
